--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,7 +13,7 @@ $color-gray: #505369;
 $color-gray-dark:#24264b;
 $color-gray-light: #717591;
 $color-blue: #a6b2c7;
-$color-blue-light: #f1f5ff;
+$color-blue-light: #f1f6ff;
 
 // GRID
 $grid-width: 120rem;
