--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,9 +1,6 @@
 .u-center-text { text-align: center !important; }
-.u-center {
-    margin-right: auto !important;
-    margin-left: auto !important;
-    display: block !important;
-}
+
+.u-short-text {width: 70vw !important;} 
 
 .u-margin-bottom-small { margin-bottom: 2rem !important; }
 .u-margin-bottom-medium { margin-bottom: 4rem !important; }
